hc::faq: Add brith. precising minor in example

--- a/hc/en/faq/index.html
+++ b/hc/en/faq/index.html
@@ -745,7 +745,7 @@ chmod('/path/to/your/serendipity/<code>serendipity_config_local.inc.php</code>',
     <pre><code>{literal}
 some_javascript
 {
-  with(braces);
+  with(curly_braces);
 }
 {/literal}</code></pre>
 
@@ -755,7 +755,7 @@ some_javascript
 
     <pre><code>some_javascript
 {ldelim}
-  with(braces);
+  with(curly_braces);
 {rdelim}</code></pre>
 
     <p>So you could just replace all occurrences of “{“ with {ldelim} and all occurrences of “}” with {rdelim} in your Javascript only.</p>
