hc::faq: Add new method info regarding install lockups

--- a/hc/en/faq/index.html
+++ b/hc/en/faq/index.html
@@ -386,6 +386,8 @@ require valid-user
 
     <p>If you encounter any errors on the next page, write them down carefully and go to ask the Serendipity Forums for help. Most errors happen if your SQL user does not have sufficient privileges, or one of the mentioned files could not be written.</p>
 
+    <p>Styx versions from 2.1 have included some other security restrictions regarding foreign access during installation, like tokenized installs or modemaintain 503 shutup.</p>
+
     <span class="faq-up"><a class="navigator" href="#faq-top">top</a></span>
 </div>
 
