hc::plugin-api: Fix atomm feed namespace description

--- a/hc/en/plugin-api.html
+++ b/hc/en/plugin-api.html
@@ -999,7 +999,7 @@ class serendipity_event_backpage extends serendipity_event
   <li><strong>frontend_display</strong>: Performed when a single entry is displayed in the Frontend</li>
   <li><strong>genpage</strong>: Performed when Smarty framework was initialized</li>
   <li><strong>frontend_display:rss-2.0:namespace</strong>: RSS feed namespace</li>
-  <li><strong>frontend_display:atom-1.0:namespace</strong>: RSS feed namespace</li>
+  <li><strong>frontend_display:atom-1.0:namespace</strong>: Atom feed namespace</li>
   <li><strong>frontend_display:rss-2.0:per_entry</strong>: Single entry display in RSS feed</li>
   <li><strong>frontend_display:atom-1.0:per_entry</strong>: Single entry display in Atom feed</li>
 </ul>
