hc::plugin-api: (minor) Add full name into examples

--- a/hc/en/plugin-api.html
+++ b/hc/en/plugin-api.html
@@ -530,7 +530,7 @@ class serendipity_event_backpage extends serendipity_event
         $propbag-&gt;add('name',          PLUGIN_EVENT_BACKPAGE_NAME);
         $propbag-&gt;add('description',   PLUGIN_EVENT_BACKPAGE_DESC);
         $propbag-&gt;add('stackable',     false);
-        $propbag-&gt;add('author',        'Ian');
+        $propbag-&gt;add('author',        'Ian Styx');
         $propbag-&gt;add('version',       '1.00');
         $propbag-&gt;add('requirements',  array(
             'serendipity' =&gt; '2.0.0',
@@ -616,7 +616,7 @@ class serendipity_event_backpage extends serendipity_event
         $propbag-&gt;add('name',          PLUGIN_EVENT_BACKPAGE_NAME);
         $propbag-&gt;add('description',   PLUGIN_EVENT_BACKPAGE_DESC);
         $propbag-&gt;add('stackable',     false);
-        $propbag-&gt;add('author',        'Ian');
+        $propbag-&gt;add('author',        'Ian Styx');
         $propbag-&gt;add('version',       '1.00');
         $propbag-&gt;add('requirements',  array(
             'serendipity' =&gt; '2.0.0',
@@ -738,7 +738,7 @@ class serendipity_event_backpage extends serendipity_event
         $propbag-&gt;add('name',          PLUGIN_EVENT_BACKPAGE_NAME);
         $propbag-&gt;add('description',   PLUGIN_EVENT_BACKPAGE_DESC);
         $propbag-&gt;add('stackable',     false);
-        $propbag-&gt;add('author',        'Ian');
+        $propbag-&gt;add('author',        'Ian Styx');
         $propbag-&gt;add('version',       '1.00');
         $propbag-&gt;add('requirements',  array(
             'serendipity' =&gt; '2.0.0',
@@ -855,7 +855,7 @@ class serendipity_event_backpage extends serendipity_event
         $propbag-&gt;add('name',          PLUGIN_EVENT_BACKPAGE_NAME);
         $propbag-&gt;add('description',   PLUGIN_EVENT_BACKPAGE_DESC);
         $propbag-&gt;add('stackable',     false);
-        $propbag-&gt;add('author',        'Ian');
+        $propbag-&gt;add('author',        'Ian Styx');
         $propbag-&gt;add('version',       '1.00');
         $propbag-&gt;add('requirements',  array(
             'serendipity' =&gt; '2.0.0',
