--- a/hc/en/media-migration-tasks.html
+++ b/hc/en/media-migration-tasks.html
@@ -122,7 +122,7 @@
                         <li><strong><em>Add/Purge all Image WebP-Format variations</em></strong><br>
                         Is for upgraders, to take advantage of more compressed webp images for old media. Adding or purge depends on last action.</li>
                     </ol>
-                    <p>Clicking on the second to fifth options, in very special N°4, since introducing a complete rewrite of blog entries using such image items, may reach your Server and PHP limit settings easily and stop the task without having finished! Search for “PHP execution time” to set this up (maybe to an amount of images or entries x 0.5 seconds), if you are allowed to, and then request the task of choice. If you run into restrictions, just reload the page to proceed the task as long as needed. Once having requested such task, you <strong>need</strong> to finish it somehow <strong>or</strong> be able to survey the possible mess and repair it all by hand yourself!</p>
+                    <p>Clicking on the second to fifth options, in very special N°4, since introducing a search & rewrite of blog entries using such image items, may reach your Server and PHP limit settings easily beyond several hundreds of matches and stop the task without having finished! Search for “PHP execution time” to set this up (maybe to an amount of images or entries x 0.5 seconds), if you are allowed to, and then request the task of choice. If you run into restrictions, just reload the page to proceed the task as long as needed. Once having requested such task, you <strong>need</strong> to finish it somehow <strong>or</strong> be able to survey the possible mess and repair it all by hand yourself!</p>
                 </div>
             </div>
         </div>
