--- a/themes/inc/themes_content.htm
+++ b/themes/inc/themes_content.htm
@@ -1796,7 +1796,7 @@ Without any theme engine set, all template files are taken from default theme. F
             <img src="/i/t/xkur/preview.png" title="Additional old small-screen theme from 2006-01-26 to 2013-10-26, with a fixed content width of 1024px. Fixed and basically upgraded for Serendipity Styx 2.1+ revisions. Based on Carl Galloway`s Serendipity Theme 3.0." alt="Xkur">
         </picture>
     </dt>
-    <dd class="theme_version">Version 1.0 (N/A GPL), 2020-04-15</dd>
+    <dd class="theme_version">Version 1.0 (N/A GPL), 2020-06-10</dd>
     <dd class="theme_maintainers" title="Reinhard Linnemann">Reinhard Linnemann</dd>
 </dl>
 <ul class="theme_actions">
@@ -1810,11 +1810,7 @@ Without any theme engine set, all template files are taken from default theme. F
     <dt class="theme_name">
         <picture>
             <source type="image/webp" srcset="/i/t/default-xml/preview.webp">
-            <img src="/i/t/default-xml/preview.png" title="Raw XML output XML-Template theme for the Serendipity Styx Blog system Simple theme from 2006, newly refurbished to work with Serendipity Styx Edition.
-This theme outputs raw XML on the frontside, to make the content readable by XML-Readers.
-It does still effect some minor plugin integrations on the backend side, like linktrimmer or amazonchooser,
-and is more or less meant to be used in a non-too-much-extended core release blog,
-though it does works with some well known plugin apps, like staticpages, freetags etc." alt="XML Engine (Dev)">
+            <img src="/i/t/default-xml/preview.png" title="Raw XML output XML-Template theme for the Serendipity Styx Blog system Simple theme from 2006, newly refurbished to work with Serendipity Styx Edition. This theme outputs raw XML on the frontside, to make the content readable by XML-Readers. It does still effect some minor plugin integrations on the backend side, like linktrimmer or amazonchooser, and is more or less meant to be used in a non-too-much-extended core release blog, though it does works with some well known plugin apps, like staticpages, freetags etc." alt="XML Engine (Dev)">
         </picture>
     </dt>
     <dd class="theme_version">Version 1.0 (BSD license), 2018-09-05</dd>
