--- a/plugins/inc/bygroups_event_en.htm
+++ b/plugins/inc/bygroups_event_en.htm
@@ -166,42 +166,6 @@
 
 </section>
 
-<section id="group_BACKEND_DASHBOARD" class="spartacus-group">
-    <h3>Backend: Dashboard</h3>
-    <div id="serendipity_event_feed" class="plugin">
-        <h4 class="plugin_summary">Dashboard Feed Reader</h4>
-        <dl class="plugin_meta">
-            <dt class="plugin_name">serendipity_event_feed</dt>
-            <dd class="plugin_version">Version 1.04 (GPL, Last Updated 2019-08-09)</dd>
-            <dd class="plugin_maintainers">Ian Styx</dd>
-            <dd class="plugin_requirements">Serendipity &gt;= 2.0.0</dd>
-        </dl>
-        <p class="plugin_description">The Dashboard S9y Feedle</p>
-        <ul class="plugin_actions">
-            <li class="plugin_download"><a href="#additional_plugins/serendipity_event_feed.zip">Download</a></li>
-            <li class="plugin_github"><a href="https://github.com/ophian/additional_plugins/tree/master/serendipity_event_feed">GitHub</a></li>
-            <li class="plugin_changelog"><a class="anchorjs-link" href="#serendipity_event_feed" aria-label="Anchor" data-anchorjs-icon=""></a></li>
-        </ul>
-    </div>
-
-    <div id="serendipity_event_autoupdate" class="plugin">
-        <h4 class="plugin_summary">Serendipity Autoupdate</h4>
-        <dl class="plugin_meta">
-            <dt class="plugin_name">serendipity_event_autoupdate</dt>
-            <dd class="plugin_version">Version 1.7.1 (GPL, Last Updated 2020-06-13)</dd>
-            <dd class="plugin_maintainers">onli, Ian Styx</dd>
-            <dd class="plugin_requirements">Serendipity &gt;= 1.6</dd>
-        </dl>
-        <p class="plugin_description">When the Dashboard (once a day) detects an update, this plugin adds the option to manually download or start an automatic and secured upgrade of the blog directly with one click from within the adminarea. With Styx 2.1+ it is recommended to use it in combination with the modemaintain (maintenance-) event plugin. For Autoupdate Notifications you have to enable the global Serendipity configuration option in &quot;Configuration:: General Settings: Update notification&quot; to &quot;stable&quot; or &quot;beta&quot; to use and get notifications at all!</p>
-        <ul class="plugin_actions">
-            <li class="plugin_download"><a href="#additional_plugins/serendipity_event_autoupdate.zip">Download</a></li>
-            <li class="plugin_github"><a href="https://github.com/ophian/additional_plugins/tree/master/serendipity_event_autoupdate">GitHub</a></li>
-            <li class="plugin_changelog"><a class="anchorjs-link" href="#serendipity_event_autoupdate" aria-label="Anchor" data-anchorjs-icon=""></a><a href="https://raw.githubusercontent.com/ophian/additional_plugins/master/serendipity_event_autoupdate/ChangeLog">ChangeLog</a></li>
-        </ul>
-    </div>
-
-</section>
-
 <section id="group_BACKEND_EDITOR" class="spartacus-group">
     <h3>Backend: Editor</h3>
     <div id="serendipity_event_amazonchooser" class="plugin">
@@ -240,7 +204,7 @@
         <h4 class="plugin_summary">CKEditor Plus</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_ckeditor</dt>
-            <dd class="plugin_version">Version 4.14.0.0 (GPL, Last Updated 2020-03-17)</dd>
+            <dd class="plugin_version">Version 4.14.1.0 (GPL, Last Updated 2020-06-24)</dd>
             <dd class="plugin_maintainers">Rustam Abdullaev, Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.6.2</dd>
         </dl>
@@ -1025,6 +989,42 @@
             <li class="plugin_download"><a href="#additional_plugins/serendipity_event_randomblogdescription.zip">Download</a></li>
             <li class="plugin_github"><a href="https://github.com/ophian/additional_plugins/tree/master/serendipity_event_randomblogdescription">GitHub</a></li>
             <li class="plugin_changelog"><a class="anchorjs-link" href="#serendipity_event_randomblogdescription" aria-label="Anchor" data-anchorjs-icon=""></a><a href="https://raw.githubusercontent.com/ophian/additional_plugins/master/serendipity_event_randomblogdescription/ChangeLog">ChangeLog</a></li>
+        </ul>
+    </div>
+
+</section>
+
+<section id="group_BACKEND_DASHBOARD" class="spartacus-group">
+    <h3>Backend: Startpage</h3>
+    <div id="serendipity_event_feed" class="plugin">
+        <h4 class="plugin_summary">Dashboard Feed Reader</h4>
+        <dl class="plugin_meta">
+            <dt class="plugin_name">serendipity_event_feed</dt>
+            <dd class="plugin_version">Version 1.04 (GPL, Last Updated 2019-08-09)</dd>
+            <dd class="plugin_maintainers">Ian Styx</dd>
+            <dd class="plugin_requirements">Serendipity &gt;= 2.0.0</dd>
+        </dl>
+        <p class="plugin_description">The Dashboard S9y Feedle</p>
+        <ul class="plugin_actions">
+            <li class="plugin_download"><a href="#additional_plugins/serendipity_event_feed.zip">Download</a></li>
+            <li class="plugin_github"><a href="https://github.com/ophian/additional_plugins/tree/master/serendipity_event_feed">GitHub</a></li>
+            <li class="plugin_changelog"><a class="anchorjs-link" href="#serendipity_event_feed" aria-label="Anchor" data-anchorjs-icon=""></a></li>
+        </ul>
+    </div>
+
+    <div id="serendipity_event_autoupdate" class="plugin">
+        <h4 class="plugin_summary">Serendipity Autoupdate</h4>
+        <dl class="plugin_meta">
+            <dt class="plugin_name">serendipity_event_autoupdate</dt>
+            <dd class="plugin_version">Version 1.7.1 (GPL, Last Updated 2020-06-13)</dd>
+            <dd class="plugin_maintainers">onli, Ian Styx</dd>
+            <dd class="plugin_requirements">Serendipity &gt;= 1.6</dd>
+        </dl>
+        <p class="plugin_description">When the Dashboard (once a day) detects an update, this plugin adds the option to manually download or start an automatic and secured upgrade of the blog directly with one click from within the adminarea. With Styx 2.1+ it is recommended to use it in combination with the modemaintain (maintenance-) event plugin. For Autoupdate Notifications you have to enable the global Serendipity configuration option in &quot;Configuration:: General Settings: Update notification&quot; to &quot;stable&quot; or &quot;beta&quot; to use and get notifications at all!</p>
+        <ul class="plugin_actions">
+            <li class="plugin_download"><a href="#additional_plugins/serendipity_event_autoupdate.zip">Download</a></li>
+            <li class="plugin_github"><a href="https://github.com/ophian/additional_plugins/tree/master/serendipity_event_autoupdate">GitHub</a></li>
+            <li class="plugin_changelog"><a class="anchorjs-link" href="#serendipity_event_autoupdate" aria-label="Anchor" data-anchorjs-icon=""></a><a href="https://raw.githubusercontent.com/ophian/additional_plugins/master/serendipity_event_autoupdate/ChangeLog">ChangeLog</a></li>
         </ul>
     </div>
 
