--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
 
             <p>Regards Ian,<br>Enjoy Styx <strong>!</strong></p>
 
-            <p>This site was created using <a href="https://pages.github.com/" target="_blank">GitHub Pages</a>.</p>
+            <p>This site was created using <a href="https://pages.github.com/" target="_blank" rel="noopener">GitHub Pages</a>>.</p>
         </div>
         <div class="blog-post__footer">
             <div class="blog-post__footer-author">
@@ -207,7 +207,7 @@
                 </div>
                 <div class="blog-post__author-description">
                     <h3>Ian Styx (ophian)<span>Maintainer</span></h3>
-                    <p class="follow"><a href="https://github.com/ophian/styx/issues" title="Styx issues" target="_blank">@ophian</a></p>
+                    <p class="follow"><a href="https://github.com/ophian/styx/issues" title="Styx issues" target="_blank" rel="noopener">@ophian</a></p>
                     <p>John Ian Styx has more than 20 years of experience in the IT market as a developer and from 2003 as a Serendipity lover.</p>
                 </div>
             </div>
