--- a/legal/index.html
+++ b/legal/index.html
@@ -94,7 +94,7 @@
                   <p>Styx may at any time revise these terms by updating this posting. By using this Website, you agree to be bound by any such revisions and should therefore periodically visit this page to determine the current terms to which you are bound.</p>
                   <p>This Website may include typographical errors or other inaccuracies. Styx may make improvements and/or changes in this Website at any time without notice. Periodically changes are made to the Website.</p>
                   <h2>Community Tools</h2>
-                  <p>Since Styx uses GitHub, please read all about GitHub <a href="https://help.github.com/articles/about-issues/" target="_blank">Issues</a>, the GitHub <a href="https://guides.github.com/features/issues/" target="_blank">Issue Features</a>, the GitHub <a href="https://help.github.com/terms" target="_blank">terms of service</a> and the GitHub <a href="https://help.github.com/privacy" target="_blank">privacy-policy</a> and lastly what they say about <a href="https://github.com/security" target="_blank">Security</a>.</p>
+                  <p>Since Styx uses GitHub, please read all about GitHub <a href="https://help.github.com/articles/about-issues/" target="_blank" rel="noopener">Issues</a>, the GitHub <a href="https://guides.github.com/features/issues/" target="_blank" rel="noopener">Issue Features</a>, the GitHub <a href="https://help.github.com/terms" target="_blank" rel="noopener">terms of service</a> and the GitHub <a href="https://help.github.com/privacy" target="_blank" rel="noopener">privacy-policy</a> and lastly what they say about <a href="https://github.com/security" target="_blank" rel="noopener">Security</a>.</p>
                   <h2>Ownership Information</h2>
                   <p>The information on this Website, along with any Materials is the copyrighted work of Ian Styx (@ophian) and Serendipity. Styx grants a permission to privately copy this Sites Informations, so long as each copy is solely for personal information and usage and kept under the dedicated license.</p>
                   <p>Any software sources which you download from this Website is governed exclusively by the license terms accompanying the file or the terms of the license agreement which accompanied the original product. By downloading such software you agree to abide by the terms of the license. Any reproduction or redistribution of such software not in accordance with the software license is expressly prohibited by law.</p>
@@ -119,7 +119,7 @@
                 </div>
                 <div class="blog-post__author-description">
                     <h3>Ian Styx (ophian)<span>Maintainer</span></h3>
-                    <p class="follow"><a href="https://github.com/ophian/styx/issues" title="Styx issues" target="_blank">@ophian</a></p>
+                    <p class="follow"><a href="https://github.com/ophian/styx/issues" title="Styx issues" target="_blank" rel="noopener">@ophian</a></p>
                     <p>John Ian Styx has more than 20 years of experience in the IT market as a developer and from 2003 as a Serendipity lover.</p>
                 </div>
             </div>
@@ -203,7 +203,7 @@
                 <ul class="footer-policy__menu">
                     <li class="footer-policy__menu-item"><a href="/legal/">Legal</a></li>
                     <li class="footer-policy__menu-item"><a href="/legal/privacy/">Privacy policy</a></li>
-                    <li class="footer-policy__menu-item"><a href="https://opensource.org/docs/definition.php" target="_blank">Open Source</a></li>
+                    <li class="footer-policy__menu-item"><a href="https://opensource.org/docs/definition.php" target="_blank" rel="noopener">Open Source</a></li>
                 </ul>
             </div>
         </div>
