--- a/legal/privacy/index.html
+++ b/legal/privacy/index.html
@@ -94,7 +94,7 @@
                     <h2>What information does Styx collect?</h2>
                     <p>For the moment Styx itself does not explicitly collect any information about you. Getting in contact is a private request and underlies the trusted privacy between humans as in real life.</p>
                     <p>However ... GitHub does!</p>
-                    <p>Styx is not responsible for collected access data within and over GitHub repositories and pages. As this Site is a GitHub hosted page, we advise you to read all about the GitHub <a href="https://help.github.com/terms" target="_blank">terms of service</a>, the GitHub <a href="https://help.github.com/privacy" target="_blank">privacy-policy</a> and what they say about the GitHub <a href="https://github.com/security" target="_blank">Security</a>. Styx has no access to the GitHub logs, apart from what they supply as a minimal "Traffic"-Information in a repository account.</p>
+                    <p>Styx is not responsible for collected access data within and over GitHub repositories and pages. As this Site is a GitHub hosted page, we advise you to read all about the GitHub <a href="https://help.github.com/terms" target="_blank" rel="noopener">terms of service</a>, the GitHub <a href="https://help.github.com/privacy" target="_blank" rel="noopener">privacy-policy</a> and what they say about the GitHub <a href="https://github.com/security" target="_blank" rel="noopener">Security</a>. Styx has no access to the GitHub logs, apart from what they supply as a minimal "Traffic"-Information in a repository account.</p>
                     <h2>Third party helpers</h2>
                     <p>This site uses Google Webfonts to display nicely. Those are called via stylesheet at fonts.googleapis.com and fonts.gstatic.com. You all know that Google does collect data (https://developers.google.com/fonts/faq). If you don't want this, you have to disallow these urls in your browsers privacy helper Add-ons.</p>
                 </div>
@@ -107,7 +107,7 @@
                 </div>
                 <div class="blog-post__author-description">
                     <h3>Ian Styx (ophian)<span>Maintainer</span></h3>
-                    <p class="follow"><a href="https://github.com/ophian/styx/issues" title="Styx issues" target="_blank">@ophian</a></p>
+                    <p class="follow"><a href="https://github.com/ophian/styx/issues" title="Styx issues" target="_blank" rel="noopener">@ophian</a></p>
                     <p>John Ian Styx has more than 20 years of experience in the IT market as a developer and from 2003 as a Serendipity lover.</p>
                 </div>
             </div>
@@ -191,7 +191,7 @@
                 <ul class="footer-policy__menu">
                     <li class="footer-policy__menu-item"><a href="/legal/">Legal</a></li>
                     <li class="footer-policy__menu-item"><a href="/legal/privacy/">Privacy policy</a></li>
-                    <li class="footer-policy__menu-item"><a href="https://opensource.org/docs/definition.php" target="_blank">Open Source</a></li>
+                    <li class="footer-policy__menu-item"><a href="https://opensource.org/docs/definition.php" target="_blank" rel="noopener">Open Source</a></li>
                 </ul>
             </div>
         </div>
