--- a/plugins/index.html
+++ b/plugins/index.html
@@ -131,7 +131,7 @@
                   <p><strong>SPARTACUS</strong> stands for<br><em>Serendipity Plugin Access Repository Tool And Customization/Unification System</em></p>
                   <p><span>[<strong>S</strong>]erendipity [<strong>P</strong>]lugin [<strong>A</strong>]ccess [<strong>R</strong>]epository [<strong>T</strong>]ool [<strong>A</strong>]nd [<strong>C</strong>]ustomization/[<strong>U</strong>]nification [<strong>S</strong>]ystem</span></p>
                   <p><strong>Styx Spartacus</strong> does <strong>only</strong> support the GIT repository, which currently isn’t able to <strong>tar/zip</strong> a subfolder (plugin) on demand for you. Therefore the manual download link is set inactive here. Please use the built-in <a href="/hc/en/faq/#docs-what-is-spartacus-how-do-i-install-spartacus">Spartacus plugin</a> to install plugin sources, or clone/download the <a href="https://github.com/ophian/additional_plugins" title="GitHub Serendipity Plugins">additional_plugins</a> repository and copy the subdir you want to install in your blog as a plugin. Please follow the provided links.</p>
-                  <p>Although, having GIT installed, <a href="https://git-scm.com/docs/git-archive#_examples" rel="nofollow" target="_blank"><code>git-archive</code></a> already supports exporting subdirectories;</p>
+                  <p>Although, having GIT installed, <a href="https://git-scm.com/docs/git-archive#_examples" rel="nofollow" target="_blank" rel="noopener"><code>git-archive</code></a> already supports exporting subdirectories;</p>
                   <pre><code>git archive -o archive.zip HEAD:path/to/subdir</code></pre>
                   <p>You may use this following example command to select additional_plugins repository subdirectories via the Terminal with GitHub;</p>
                   <pre><code>$ git archive -o serendipity_event_autoupdate.zip HEAD:serendipity_event_autoupdate --prefix=serendipity_event_autoupdate/</code></pre>
@@ -150,7 +150,7 @@
                 </div>
                 <div class="blog-post__author-description">
                     <h3>Ian Styx (ophian)<span>Maintainer</span></h3>
-                    <p class="follow"><a href="https://github.com/ophian/styx/issues" title="Styx issues" target="_blank">@ophian</a></p>
+                    <p class="follow"><a href="https://github.com/ophian/styx/issues" title="Styx issues" target="_blank" rel="noopener">@ophian</a></p>
                     <p>John Ian Styx has more than 20 years of experience in the IT market as a developer and from 2003 as a Serendipity lover.</p>
                 </div>
             </div>
@@ -232,7 +232,7 @@
                 <ul class="footer-policy__menu">
                     <li class="footer-policy__menu-item"><a href="/legal/">Legal</a></li>
                     <li class="footer-policy__menu-item"><a href="/legal/privacy/">Privacy policy</a></li>
-                    <li class="footer-policy__menu-item"><a href="https://opensource.org/docs/definition.php" target="_blank">Open Source</a></li>
+                    <li class="footer-policy__menu-item"><a href="https://opensource.org/docs/definition.php" target="_blank" rel="noopener">Open Source</a></li>
                 </ul>
             </div>
         </div>
