hc: Secure target blank links

--- a/hc/en/faq/index.html
+++ b/hc/en/faq/index.html
@@ -900,7 +900,7 @@ function smarty_function_mydir($params, Smarty_Internal_Template $template) {
 <h4 id="docs-popfetcher-posting-new-entries-by-email">POPfetcher: Posting new entries by email</h4>
 
 <div>
-    <p>Serendipity’s <a href="https://github.com/ophian/additional_plugins/tree/master/serendipity_event_popfetcher" target="_blank">POPfetcher plugin</a> allows you to post new entries just by emailing them to your blog!</p>
+    <p>Serendipity’s <a href="https://github.com/ophian/additional_plugins/tree/master/serendipity_event_popfetcher" target="_blank" rel="noopener">POPfetcher plugin</a> allows you to post new entries just by emailing them to your blog!</p>
 
     <p>First, get yourself an email account only for adding blog entries. Either you can create a mail adress on your hosting server, or use a free POP3 service like hotmail.com or Gmail. Let’s pretend you picked up <code>john@example.org</code>.</p>
 
@@ -944,7 +944,7 @@ function smarty_function_mydir($params, Smarty_Internal_Template $template) {
                 </div>
                 <div class="blog-post__author-description">
                     <h3>Ian Styx (ophian)<span>Maintainer</span></h3>
-                    <p class="follow"><a href="https://github.com/ophian/styx/issues" title="Styx issues" target="_blank">@ophian</a></p>
+                    <p class="follow"><a href="https://github.com/ophian/styx/issues" title="Styx issues" target="_blank" rel="noopener">@ophian</a></p>
                     <p>John Ian Styx has more than 20 years of experience in the IT market as a developer and from 2003 as a Serendipity lover.</p>
                 </div>
             </div>
@@ -1034,7 +1034,7 @@ function smarty_function_mydir($params, Smarty_Internal_Template $template) {
                 <ul class="footer-policy__menu">
                     <li class="footer-policy__menu-item"><a href="/legal/">Legal</a></li>
                     <li class="footer-policy__menu-item"><a href="/legal/privacy/">Privacy policy</a></li>
-                    <li class="footer-policy__menu-item"><a href="https://opensource.org/docs/definition.php" target="_blank">Open Source</a></li>
+                    <li class="footer-policy__menu-item"><a href="https://opensource.org/docs/definition.php" target="_blank" rel="noopener">Open Source</a></li>
                 </ul>
             </div>
         </div>
