--- a/hc/en/installation.html
+++ b/hc/en/installation.html
@@ -467,7 +467,7 @@
 
 <p>Now that you have successfully installed Serendipity Styx, go ahead and explore. Create some entries, categories, or install a few plugins via Spartacus, that you can also find here in the <a href="../../plugins/">Styx Spartacus WWW mirror</a>. A recommended one for immediate install for example would be the “<b>Serendipity Autoupdate</b>” event plugin! The Spartacus interface is in most cases self-explanatory and open for experiments.</p>
 
-<p>If you have any questions, feel free to come to <a href="https://board.s9y.org/" target="_blank">the forums</a> or to browse the <a href="./index.html">docs section</a> for further documentation.</p>
+<p>If you have any questions, feel free to come to <a href="https://board.s9y.org/" target="_blank" rel="noopener">the forums</a> or to browse the <a href="./index.html">docs section</a> for further documentation.</p>
 
                 </div>
             </div>
@@ -479,7 +479,7 @@
                 </div>
                 <div class="blog-post__author-description">
                     <h3>Ian Styx (ophian)<span>Maintainer</span></h3>
-                    <p class="follow"><a href="https://github.com/ophian/styx/issues" title="Styx issues" target="_blank">@ophian</a></p>
+                    <p class="follow"><a href="https://github.com/ophian/styx/issues" title="Styx issues" target="_blank" rel="noopener">@ophian</a></p>
                     <p>John Ian Styx has more than 20 years of experience in the IT market as a developer and from 2003 as a Serendipity lover.</p>
                 </div>
             </div>
@@ -563,7 +563,7 @@
                 <ul class="footer-policy__menu">
                     <li class="footer-policy__menu-item"><a href="/legal/">Legal</a></li>
                     <li class="footer-policy__menu-item"><a href="/legal/privacy/">Privacy policy</a></li>
-                    <li class="footer-policy__menu-item"><a href="https://opensource.org/docs/definition.php" target="_blank">Open Source</a></li>
+                    <li class="footer-policy__menu-item"><a href="https://opensource.org/docs/definition.php" target="_blank" rel="noopener">Open Source</a></li>
                 </ul>
             </div>
         </div>
