--- a/hc/en/ssl-encrypting.html
+++ b/hc/en/ssl-encrypting.html
@@ -107,7 +107,7 @@
 
                     <p>When you operate a root server on your own, you should know how to do this. ;-)</p>
 
-                    <p>There is to say that nowadays you can easily get SSL certificates for no charge at <a href="https://letsencrypt.org" target="_blank">Let’s Encrypt</a>.</p>
+                    <p>There is to say that nowadays you can easily get SSL certificates for no charge at <a href="https://letsencrypt.org" target="_blank" rel="noopener">Let’s Encrypt</a>.</p>
 
                     <h3 id="docs-map-all-http-calls-to-https">Map all HTTP-calls to HTTPS</h3>
 
@@ -146,7 +146,7 @@
                 </div>
                 <div class="blog-post__author-description">
                     <h3>Ian Styx (ophian)<span>Maintainer</span></h3>
-                    <p class="follow"><a href="https://github.com/ophian/styx/issues" title="Styx issues" target="_blank">@ophian</a></p>
+                    <p class="follow"><a href="https://github.com/ophian/styx/issues" title="Styx issues" target="_blank" rel="noopener">@ophian</a></p>
                     <p>John Ian Styx has more than 20 years of experience in the IT market as a developer and from 2003 as a Serendipity lover.</p>
                 </div>
             </div>
@@ -230,7 +230,7 @@
                 <ul class="footer-policy__menu">
                     <li class="footer-policy__menu-item"><a href="/legal/">Legal</a></li>
                     <li class="footer-policy__menu-item"><a href="/legal/privacy/">Privacy policy</a></li>
-                    <li class="footer-policy__menu-item"><a href="https://opensource.org/docs/definition.php" target="_blank">Open Source</a></li>
+                    <li class="footer-policy__menu-item"><a href="https://opensource.org/docs/definition.php" target="_blank" rel="noopener">Open Source</a></li>
                 </ul>
             </div>
         </div>
