--- a/hc/en/plugin-api.html
+++ b/hc/en/plugin-api.html
@@ -1138,7 +1138,7 @@ class serendipity_event_backpage extends serendipity_event
                 </div>
                 <div class="blog-post__author-description">
                     <h3>Ian Styx (ophian)<span>Maintainer</span></h3>
-                    <p class="follow"><a href="https://github.com/ophian/styx/issues" title="Styx issues" target="_blank">@ophian</a></p>
+                    <p class="follow"><a href="https://github.com/ophian/styx/issues" title="Styx issues" target="_blank" rel="noopener">@ophian</a></p>
                     <p>John Ian Styx has more than 20 years of experience in the IT market as a developer and from 2003 as a Serendipity lover.</p>
                 </div>
             </div>
@@ -1222,7 +1222,7 @@ class serendipity_event_backpage extends serendipity_event
                 <ul class="footer-policy__menu">
                     <li class="footer-policy__menu-item"><a href="/legal/">Legal</a></li>
                     <li class="footer-policy__menu-item"><a href="/legal/privacy/">Privacy policy</a></li>
-                    <li class="footer-policy__menu-item"><a href="https://opensource.org/docs/definition.php" target="_blank">Open Source</a></li>
+                    <li class="footer-policy__menu-item"><a href="https://opensource.org/docs/definition.php" target="_blank" rel="noopener">Open Source</a></li>
                 </ul>
             </div>
         </div>
