--- a/hc/en/using-plugins.html
+++ b/hc/en/using-plugins.html
@@ -317,7 +317,7 @@
 
                     <p>You can download the plugin you want either via the Spartacus plugin (<b>recommended</b>) or by downloading this full <a href="https://github.com/ophian/additional_plugins/archive/master.zip">plugin snapshot</a> via GitHub.com.</p>
 
-                    <p>A plugin always consists of a single directory like eg. “serendipity_event_trackback” with at least one file in it. If you use GitHub already, the <a href="https://git-scm.com/docs/git-archive#_examples" rel="nofollow" target="_blank"><code>git-archive</code></a> command already supports exporting subdirectories, which are singular Serendipity plugins; see explanation on this <a href="../../plugins/">Styx Spartacus</a> page. Save that file on your Serendipity installation and extract it as a subdirectory of your /plugins directory. The path would then look like “plugins/serendipity_event_trackback/”. Inside that directory you then have the file “serendipity_event_trackback.php” and probably some more.</p>
+                    <p>A plugin always consists of a single directory like eg. “serendipity_event_trackback” with at least one file in it. If you use GitHub already, the <a href="https://git-scm.com/docs/git-archive#_examples" rel="nofollow" target="_blank" rel="noopener"><code>git-archive</code></a> command already supports exporting subdirectories, which are singular Serendipity plugins; see explanation on this <a href="../../plugins/">Styx Spartacus</a> page. Save that file on your Serendipity installation and extract it as a subdirectory of your /plugins directory. The path would then look like “plugins/serendipity_event_trackback/”. Inside that directory you then have the file “serendipity_event_trackback.php” and probably some more.</p>
 
                     <p>After you have downloaded and placed all files you want to add manually, you can go to your Serendipity Plugin manager and on the list of available plugins you will see your latest acquired plugin. :-)</p>
 
@@ -641,7 +641,7 @@
                 </div>
                 <div class="blog-post__author-description">
                     <h3>Ian Styx (ophian)<span>Maintainer</span></h3>
-                    <p class="follow"><a href="https://github.com/ophian/styx/issues" title="Styx issues" target="_blank">@ophian</a></p>
+                    <p class="follow"><a href="https://github.com/ophian/styx/issues" title="Styx issues" target="_blank" rel="noopener">@ophian</a></p>
                     <p>John Ian Styx has more than 20 years of experience in the IT market as a developer and from 2003 as a Serendipity lover.</p>
                 </div>
             </div>
@@ -725,7 +725,7 @@
                 <ul class="footer-policy__menu">
                     <li class="footer-policy__menu-item"><a href="/legal/">Legal</a></li>
                     <li class="footer-policy__menu-item"><a href="/legal/privacy/">Privacy policy</a></li>
-                    <li class="footer-policy__menu-item"><a href="https://opensource.org/docs/definition.php" target="_blank">Open Source</a></li>
+                    <li class="footer-policy__menu-item"><a href="https://opensource.org/docs/definition.php" target="_blank" rel="noopener">Open Source</a></li>
                 </ul>
             </div>
         </div>
