--- a/plugins/inc/bygroups_event_en.htm
+++ b/plugins/inc/bygroups_event_en.htm
@@ -136,7 +136,7 @@
         <h4 class="plugin_summary">Spamblock (Bayes)</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_spamblock_bayes</dt>
-            <dd class="plugin_version">Version 1.06 (GPL, Last Updated 2019-08-18)</dd>
+            <dd class="plugin_version">Version 1.07 (GPL, Last Updated 2020-06-29)</dd>
             <dd class="plugin_maintainers">kleinerChemiker, Malte Paskuda, based upon b8 by Tobias Leupold, Mario Hommmel, Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.1.2</dd>
         </dl>
@@ -316,7 +316,7 @@
         <h4 class="plugin_summary">Geotag</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_geotag</dt>
-            <dd class="plugin_version">Version 1.39 (GPL, Last Updated 2020-06-05)</dd>
+            <dd class="plugin_version">Version 1.40 (GPL, Last Updated 2020-06-30)</dd>
             <dd class="plugin_maintainers">Zoran Kovacevic, Grischa Brockhaus, Matthias Gutjahr, Martin Sewelies</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.0</dd>
         </dl>
@@ -460,7 +460,7 @@
         <h4 class="plugin_summary">Static Pages</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_staticpage</dt>
-            <dd class="plugin_version">Version 6.11 (GPL, Last Updated 2020-05-15)</dd>
+            <dd class="plugin_version">Version 6.12 (GPL, Last Updated 2020-06-29)</dd>
             <dd class="plugin_maintainers">Marco Rinck, Garvin Hicking, David Rolston, Falk Doering, Stephan Manske, Pascal Uhlmann, Ian Styx, Don Chambers</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.9.0</dd>
         </dl>
@@ -656,7 +656,7 @@
         <h4 class="plugin_summary">DSGVO / GDPR: General Data Protection Regulation</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_dsgvo_gdpr</dt>
-            <dd class="plugin_version">Version 1.82 (GPL, Last Updated 2020-01-23)</dd>
+            <dd class="plugin_version">Version 1.83 (GPL, Last Updated 2020-06-29)</dd>
             <dd class="plugin_maintainers">Serendipity Team, Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.0</dd>
         </dl>
@@ -704,7 +704,7 @@
         <h4 class="plugin_summary">Event-Calendar</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_cal</dt>
-            <dd class="plugin_version">Version 1.86 (GPL, Last Updated 2019-08-18)</dd>
+            <dd class="plugin_version">Version 1.87 (GPL, Last Updated 2020-06-29)</dd>
             <dd class="plugin_maintainers">Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 1.6</dd>
         </dl>
@@ -736,7 +736,7 @@
         <h4 class="plugin_summary">Guestbook</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_guestbook</dt>
-            <dd class="plugin_version">Version 3.76 (GPL, Last Updated 2020-01-12)</dd>
+            <dd class="plugin_version">Version 3.77 (GPL, Last Updated 2020-06-29)</dd>
             <dd class="plugin_maintainers">Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 1.7.0</dd>
         </dl>
@@ -880,7 +880,7 @@
         <h4 class="plugin_summary">Static Pages</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_staticpage</dt>
-            <dd class="plugin_version">Version 6.11 (GPL, Last Updated 2020-05-15)</dd>
+            <dd class="plugin_version">Version 6.12 (GPL, Last Updated 2020-06-29)</dd>
             <dd class="plugin_maintainers">Marco Rinck, Garvin Hicking, David Rolston, Falk Doering, Stephan Manske, Pascal Uhlmann, Ian Styx, Don Chambers</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.9.0</dd>
         </dl>
@@ -1348,7 +1348,7 @@
         <h4 class="plugin_summary">Links to next/previous entry</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_entrypaging</dt>
-            <dd class="plugin_version">Version 1.73 (GPL, Last Updated 2020-03-22)</dd>
+            <dd class="plugin_version">Version 1.74 (GPL, Last Updated 2020-06-29)</dd>
             <dd class="plugin_maintainers">Garvin Hicking, Wesley Hwang-Chung, Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.0</dd>
         </dl>
@@ -1656,7 +1656,7 @@
         <h4 class="plugin_summary">oEmbed Plugin</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_oembed</dt>
-            <dd class="plugin_version">Version 1.17 (GPL, Last Updated 2018-09-05)</dd>
+            <dd class="plugin_version">Version 1.18 (GPL, Last Updated 2020-06-29)</dd>
             <dd class="plugin_maintainers">Grischa Brockhaus</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 1.7</dd>
         </dl>
@@ -1692,7 +1692,7 @@
         <h4 class="plugin_summary">DSGVO / GDPR: General Data Protection Regulation</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_dsgvo_gdpr</dt>
-            <dd class="plugin_version">Version 1.82 (GPL, Last Updated 2020-01-23)</dd>
+            <dd class="plugin_version">Version 1.83 (GPL, Last Updated 2020-06-29)</dd>
             <dd class="plugin_maintainers">Serendipity Team, Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.0</dd>
         </dl>
@@ -1708,7 +1708,7 @@
         <h4 class="plugin_summary">Event-Calendar</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_cal</dt>
-            <dd class="plugin_version">Version 1.86 (GPL, Last Updated 2019-08-18)</dd>
+            <dd class="plugin_version">Version 1.87 (GPL, Last Updated 2020-06-29)</dd>
             <dd class="plugin_maintainers">Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 1.6</dd>
         </dl>
@@ -1756,7 +1756,7 @@
         <h4 class="plugin_summary">Guestbook</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_guestbook</dt>
-            <dd class="plugin_version">Version 3.76 (GPL, Last Updated 2020-01-12)</dd>
+            <dd class="plugin_version">Version 3.77 (GPL, Last Updated 2020-06-29)</dd>
             <dd class="plugin_maintainers">Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 1.7.0</dd>
         </dl>
@@ -1820,7 +1820,7 @@
         <h4 class="plugin_summary">Static Pages</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_staticpage</dt>
-            <dd class="plugin_version">Version 6.11 (GPL, Last Updated 2020-05-15)</dd>
+            <dd class="plugin_version">Version 6.12 (GPL, Last Updated 2020-06-29)</dd>
             <dd class="plugin_maintainers">Marco Rinck, Garvin Hicking, David Rolston, Falk Doering, Stephan Manske, Pascal Uhlmann, Ian Styx, Don Chambers</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.9.0</dd>
         </dl>
@@ -2020,7 +2020,7 @@
         <h4 class="plugin_summary">Comment Spice</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_commentspice</dt>
-            <dd class="plugin_version">Version 1.15 (GPL, Last Updated 2020-01-06)</dd>
+            <dd class="plugin_version">Version 1.16 (GPL, Last Updated 2020-06-30)</dd>
             <dd class="plugin_maintainers">Grischa Brockhaus, Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 1.6</dd>
         </dl>
@@ -2116,7 +2116,7 @@
         <h4 class="plugin_summary">Microblogging (Twitter,Identica)</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_twitter</dt>
-            <dd class="plugin_version">Version 1.72 (GPL, Last Updated 2020-06-04)</dd>
+            <dd class="plugin_version">Version 1.73 (GPL, Last Updated 2020-06-29)</dd>
             <dd class="plugin_maintainers">Grischa Brockhaus, Peter Heimann</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.0</dd>
         </dl>
@@ -2248,7 +2248,7 @@
         <h4 class="plugin_summary">Extended options for media manager</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_imageselectorplus</dt>
-            <dd class="plugin_version">Version 1.21 (GPL, Last Updated 2020-01-27)</dd>
+            <dd class="plugin_version">Version 1.22 (GPL, Last Updated 2020-06-29)</dd>
             <dd class="plugin_maintainers">Garvin Hicking, Vladimir Ajgl, Adam Charnock, Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.0.0</dd>
         </dl>
@@ -2312,7 +2312,7 @@
         <h4 class="plugin_summary">Markup: Gallery Image</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_galleryimage</dt>
-            <dd class="plugin_version">Version 1.15 (GPL, Last Updated 2020-06-04)</dd>
+            <dd class="plugin_version">Version 1.16 (GPL, Last Updated 2020-06-29)</dd>
             <dd class="plugin_maintainers">Rob Antonishen, Alexander Mieland</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.0</dd>
         </dl>
@@ -2412,7 +2412,7 @@
         <h4 class="plugin_summary">Extended options for media manager</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_imageselectorplus</dt>
-            <dd class="plugin_version">Version 1.21 (GPL, Last Updated 2020-01-27)</dd>
+            <dd class="plugin_version">Version 1.22 (GPL, Last Updated 2020-06-29)</dd>
             <dd class="plugin_maintainers">Garvin Hicking, Vladimir Ajgl, Adam Charnock, Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.0.0</dd>
         </dl>
@@ -2476,7 +2476,7 @@
         <h4 class="plugin_summary">Markup: Gallery Image</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_galleryimage</dt>
-            <dd class="plugin_version">Version 1.15 (GPL, Last Updated 2020-06-04)</dd>
+            <dd class="plugin_version">Version 1.16 (GPL, Last Updated 2020-06-29)</dd>
             <dd class="plugin_maintainers">Rob Antonishen, Alexander Mieland</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.0</dd>
         </dl>
@@ -2800,8 +2800,8 @@
         <h4 class="plugin_summary">Google Analytics</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_google_analytics</dt>
-            <dd class="plugin_version">Version 1.5 (GPL, Last Updated 2018-08-21)</dd>
-            <dd class="plugin_maintainers">&lt;a href=&quot;https://github.com/kleinerChemiker&quot; target=&quot;_blank&quot;&gt;kleinerChemiker&lt;/a&gt;</dd>
+            <dd class="plugin_version">Version 1.6 (GPL, Last Updated 2020-06-29)</dd>
+            <dd class="plugin_maintainers">&lt;a href=&quot;https://github.com/kleinerChemiker&quot; target=&quot;_blank&quot; rel=&quot;noopener&quot;&gt;kleinerChemiker&lt;/a&gt;</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.0</dd>
         </dl>
         <p class="plugin_description">This plugin adds extended Google Analytic functionality to your Page like tracking external links or download links.</p>
@@ -2880,7 +2880,7 @@
         <h4 class="plugin_summary">Statistics</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_statistics</dt>
-            <dd class="plugin_version">Version 1.81 (GPL, Last Updated 2020-06-04)</dd>
+            <dd class="plugin_version">Version 1.82 (GPL, Last Updated 2020-06-29)</dd>
             <dd class="plugin_maintainers">Arnan de Gans, Garvin Hicking, Fredrik Sandberg, kalkin, Matthias Mees, Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.0</dd>
         </dl>
