hc::templating: Ref ophian/styx@2be1d7cbdf90f5e38b5ceed4a315ee7e4852c30d file name change

--- a/hc/en/templating.html
+++ b/hc/en/templating.html
@@ -283,7 +283,7 @@ Engine: [ENGINE]</code></pre>
 
 <p>Needless to say, that the cascade iteration is being stopped, when the searched template file is found. <strong>First come, first serve!</strong></p>
 
-<p>(*) Some special Backend images and the designated and <em>special cased</em> “serendipity_editor.js” Backend template file(s), follow the Frontend principles of “default/” first, while being called from the “external_plugin” plugin API hook, or by “Frontend designed” callers, outside the current cascade array.</p>
+<p>(*) Some special Backend images and the designated and <em>special cased</em> “serendipity_editor.js” | “serendipity_styx.js” (Styx 3.1) Backend template file(s), follow the Frontend principles of “default/” first, while being called from the “external_plugin” plugin API hook, or by “Frontend designed” callers, outside the current cascade array.</p>
 
 <h4 id="docs-previewpng-preview_fullsizejpg">preview.png, preview_fullsize.jpg</h4>
 
@@ -1340,9 +1340,9 @@ It is not advised to create your own  style_fallback.css file.</p>
   <li>admin/plugin_config_item.tpl</li>
   <li>admin/plugins.inc.tpl</li>
   <li>admin/preview_iconizr.css</li>
-  <li>admin/serendipity_editor.js</li>
-  <li>admin/serendipity_editor.js.php</li>
-  <li>admin/serendipity_editor.js.tpl</li>
+  <li>admin/serendipity_editor.js | [Styx >= 3.1] admin/serendipity_styx.js</li>
+  <li>admin/serendipity_editor.js.php | [Styx >= 3.1] admin/serendipity_styx.js.php</li>
+  <li>admin/serendipity_editor.js.tpl | [Styx >= 3.1] admin/serendipity_styx.js.tpl</li>
   <li>admin/show_plugins.fnc.tpl</li>
   <li>admin/style.css</li>
   <li>admin/templates.inc.tpl</li>
