hc::installation: Add xml requirement and PHP version for Series 3

--- a/hc/en/installation.html
+++ b/hc/en/installation.html
@@ -260,7 +260,7 @@
 
 <p>For full operation, Serendipity relies on .htaccess files that your Virtual Host must allow. For Apache, this requires the <code>Allow Override File Info Indexes Limit</code> (or <code>Allow Override All</code>) option set to the directory of your Serendipity installation.</p>
 
-<p>A current Serendipity requires at least PHP 5.5 and fully enabled and working Cookie Session support. It requires the PCRE extension, and optionally makes use of the GD, iconv, zlib and mbstring extensions. Serendipity is fully PHP 5/7 compatible and encourages the use of PHP bytecode compilers like APC, Zend Cache or ionCube.</p>
+<p>A current Serendipity Styx 2/3 Series require at least PHP 5.5/7.3 and fully enabled and working Cookie Session support. It requires the PCRE extension, and optionally makes use of the GD, iconv, xml, zlib and mbstring extensions. Serendipity is fully PHP 5/7 compatible and encourages the use of PHP bytecode compilers like APC, Zend Cache or ionCube.</p>
 
 <p>When operating Serendipity in PHP’s Safe Mode, you will not be able to use File Upload and SPARTACUS Plugin fetching facilities. Enabling error_reporting and display_errors (or directing this to a log file) is suggested to keep track of possible errors. The file_uploads directory should be turned ON if you want to have media file upload features. For graphic processing, you either require GDLib or ImageMagick.</p>
 
