--- a/plugins/inc/bygroups_event_en.htm
+++ b/plugins/inc/bygroups_event_en.htm
@@ -656,7 +656,7 @@
         <h4 class="plugin_summary">DSGVO / GDPR: General Data Protection Regulation</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_dsgvo_gdpr</dt>
-            <dd class="plugin_version">Version 1.84 (GPL, Last Updated 2020-07-01)</dd>
+            <dd class="plugin_version">Version 2.00 (GPL, Last Updated 2020-09-17)</dd>
             <dd class="plugin_maintainers">Serendipity Team, Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.0</dd>
         </dl>
@@ -1412,7 +1412,7 @@
         <h4 class="plugin_summary">OpenStreetMap integration</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_osm</dt>
-            <dd class="plugin_version">Version 0.6 (GPL, Last Updated 2020-05-15)</dd>
+            <dd class="plugin_version">Version 0.7 (GPL, Last Updated 2020-09-17)</dd>
             <dd class="plugin_maintainers">Martin Sewelies</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.3</dd>
         </dl>
@@ -1428,7 +1428,7 @@
         <h4 class="plugin_summary">OpenStreetMap static files</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_static_osm</dt>
-            <dd class="plugin_version">Version 0.6 (GPL, Last Updated 2020-05-15)</dd>
+            <dd class="plugin_version">Version 0.7 (GPL, Last Updated 2020-09-17)</dd>
             <dd class="plugin_maintainers">Martin Sewelies</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.3</dd>
         </dl>
@@ -1692,7 +1692,7 @@
         <h4 class="plugin_summary">DSGVO / GDPR: General Data Protection Regulation</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_dsgvo_gdpr</dt>
-            <dd class="plugin_version">Version 1.84 (GPL, Last Updated 2020-07-01)</dd>
+            <dd class="plugin_version">Version 2.00 (GPL, Last Updated 2020-09-17)</dd>
             <dd class="plugin_maintainers">Serendipity Team, Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.0</dd>
         </dl>
@@ -1749,6 +1749,22 @@
             <li class="plugin_download"><a href="#additional_plugins/serendipity_event_faq.zip">Download</a></li>
             <li class="plugin_github"><a href="https://github.com/ophian/additional_plugins/tree/master/serendipity_event_faq">GitHub</a></li>
             <li class="plugin_changelog"><a class="anchorjs-link" href="#serendipity_event_faq" aria-label="Anchor" data-anchorjs-icon=""></a><a href="https://raw.githubusercontent.com/ophian/additional_plugins/master/serendipity_event_faq/ChangeLog">ChangeLog</a></li>
+        </ul>
+    </div>
+
+    <div id="serendipity_event_geo_json" class="plugin">
+        <h4 class="plugin_summary">Geo-JSON</h4>
+        <dl class="plugin_meta">
+            <dt class="plugin_name">serendipity_event_geo_json</dt>
+            <dd class="plugin_version">Version 0.2.1 (GPL, Last Updated 2020-09-17)</dd>
+            <dd class="plugin_maintainers">Martin Sewelies</dd>
+            <dd class="plugin_requirements">Serendipity &gt;= 2.3</dd>
+        </dl>
+        <p class="plugin_description">Provides a JSON object with all geo data which can be processed by JavaScript.</p>
+        <ul class="plugin_actions">
+            <li class="plugin_download"><a href="#additional_plugins/serendipity_event_geo_json.zip">Download</a></li>
+            <li class="plugin_github"><a href="https://github.com/ophian/additional_plugins/tree/master/serendipity_event_geo_json">GitHub</a></li>
+            <li class="plugin_changelog"><a class="anchorjs-link" href="#serendipity_event_geo_json" aria-label="Anchor" data-anchorjs-icon=""></a><a href="https://raw.githubusercontent.com/ophian/additional_plugins/master/serendipity_event_geo_json/ChangeLog">ChangeLog</a></li>
         </ul>
     </div>
 
