--- a/themes/inc/themes_content.htm
+++ b/themes/inc/themes_content.htm
@@ -230,7 +230,7 @@
             <img src="/i/t/blix/preview.png" title="Additional old theme from 2006-01-03 to 2014-01-09, with a fixed content size of 770px. Structural child sibling of leaf and glossy_white themes. Fixed and basically upgraded for Serendipity Styx 2.1+ revisions." alt="Blix">
         </picture>
     </dt>
-    <dd class="theme_version">Version 1.0 (N/A GPL), 2020-04-21</dd>
+    <dd class="theme_version">Version 1.0 (N/A GPL), 2020-09-27</dd>
     <dd class="theme_maintainers" title="Sebastian Schmieg (ported by Christian Hoffmann)">Sebastian Schmieg (ported by Christian Hoffmann)</dd>
 </dl>
 <ul class="theme_actions">
@@ -640,7 +640,7 @@
             <img src="/i/t/glossy_white/preview.png" title="Additional old theme from 2005-12-13 to 2014-01-09, with a concatenated sidebar to the right and with a fixed content size of 770px. Structural child of leaf and (parent) sibling of blix theme. Fixed and basically upgraded for Serendipity Styx 2.1+ revisions." alt="Glossy white">
         </picture>
     </dt>
-    <dd class="theme_version">Version 1.0 (N/A GPL), 2020-04-17</dd>
+    <dd class="theme_version">Version 1.0 (N/A GPL), 2020-09-27</dd>
     <dd class="theme_maintainers" title="Christian Hoffmann (ported by Ziyad Saeed)">Christian Hoffmann (ported by Ziyad Saeed)</dd>
 </dl>
 <ul class="theme_actions">
@@ -740,7 +740,7 @@
     <dt class="theme_name">
         <picture>
             <source type="image/webp" srcset="/i/t/idea/preview.webp">
-            <img src="/i/t/idea/preview.png" title="CSS complete theme only. Simple example theme from 2004 using all the template files from the old default fallback (Serendipity 2.3) theme. Styled by CSS only." alt="Idea">
+            <img src="/i/t/idea/preview.png" title="THEME_INFO_SUMMARY (text in lang_info_en.inc.php pattern) THEME_INFO_DESC (and LANG_CHARSET depending language files)" alt="Idea">
         </picture>
     </dt>
     <dd class="theme_version">Version 1.0 (BSD license), 2020-04-17</dd>
@@ -1367,7 +1367,7 @@ Without any theme engine set, all template files are taken from default theme. F
             <img src="/i/t/plus9/preview.png" title="Additional old theme from 2014-01-09 Basically upgraded for Serendipity Styx 2.1+ revisions." alt="Plus9">
         </picture>
     </dt>
-    <dd class="theme_version">Version 1.0 (N/A GPL), 2020-04-16</dd>
+    <dd class="theme_version">Version 1.0 (N/A GPL), 2020-09-27</dd>
     <dd class="theme_maintainers" title="Reinhard Linnemann">Reinhard Linnemann</dd>
     <dd class="theme_requirements">Serendipity &gt;= 2.1</dd>
 </dl>
@@ -1451,7 +1451,7 @@ Without any theme engine set, all template files are taken from default theme. F
     <dt class="theme_name">
         <picture>
             <source type="image/webp" srcset="/i/t/default-rtl/preview.webp">
-            <img src="/i/t/default-rtl/preview.png" title="Language dependent Right-To-Left written RTL-Theme [still needs some love!] as v0.4 Simple example theme from 2006 in right-to-left oriented manner, depending on the old styled default (Serendipity 2.3) theme." alt="RTL-Languages">
+            <img src="/i/t/default-rtl/preview.png" title="THEME_INFO_SUMMARY (text in lang_info_en.inc.php pattern) THEME_INFO_DESC (and LANG_CHARSET depending language files)" alt="RTL-Languages">
         </picture>
     </dt>
     <dd class="theme_version">Version 1.0 (BSD license), 2020-04-18</dd>
@@ -1810,7 +1810,7 @@ Without any theme engine set, all template files are taken from default theme. F
     <dt class="theme_name">
         <picture>
             <source type="image/webp" srcset="/i/t/default-xml/preview.webp">
-            <img src="/i/t/default-xml/preview.png" title="Raw XML output XML-Template theme for the Serendipity Styx Blog system Simple theme from 2006, newly refurbished to work with Serendipity Styx Edition. This theme outputs raw XML on the frontside, to make the content readable by XML-Readers. It does still effect some minor plugin integrations on the backend side, like linktrimmer or amazonchooser, and is more or less meant to be used in a non-too-much-extended core release blog, though it does works with some well known plugin apps, like staticpages, freetags etc." alt="XML Engine (Dev)">
+            <img src="/i/t/default-xml/preview.png" title="THEME_INFO_SUMMARY (text in lang_info_en.inc.php pattern) THEME_INFO_DESC (and LANG_CHARSET depending language files)" alt="XML Engine (Dev)">
         </picture>
     </dt>
     <dd class="theme_version">Version 1.0 (BSD license), 2018-09-05</dd>
